WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283041
[UnifiedPDF] [iOS] PDF context menu should not have 'Copy Link with Highlight' option
https://bugs.webkit.org/show_bug.cgi?id=283041
Summary
[UnifiedPDF] [iOS] PDF context menu should not have 'Copy Link with Highlight...
Tim Horton
Reported
2024-11-12 23:35:58 PST
[UnifiedPDF] [iOS] PDF context menu should not have 'Copy Link with Highlight' option
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2024-11-12 23:35:59 PST
<
rdar://problem/137901317
>
Tim Horton
Comment 2
2024-11-12 23:37:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36584
EWS
Comment 3
2024-11-13 00:39:03 PST
Committed
286522@main
(702f48f0f286): <
https://commits.webkit.org/286522@main
> Reviewed commits have been landed. Closing PR #36584 and removing active labels.
Abrar Rahman Protyasha
Comment 4
2024-12-12 16:43:30 PST
***
Bug 281449
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug