[UnifiedPDF] [iOS] PDF context menu should not have 'Copy Link with Highlight' option https://bugs.webkit.org/show_bug.cgi?id=283041 rdar://137901317

Reviewed by Abrar Rahman Protyasha.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView shouldAllowHighlightLinkCreation]):
Don't allow creation of STTF links when displaying a PDF, since we can't create nor ingest them.

Canonical link: https://commits.webkit.org/286522@main